--- a/table1.css
+++ b/table1.css
@@ -4,10 +4,7 @@
        text-align: center;
    }
 
-   .costum-table {
-       border-collapse: collapse;
-   }
-
+   
    /* .costum-table thead tr:nth-child(1) th:nth-last-child(1) {
             background-color: hsl(223.85deg 54.17% 90.59%);
         }
@@ -23,6 +20,8 @@
         .costum-table thead tr:nth-child(1) th:nth-last-child(4) {
             background-color: hsl(223.85deg 54.17% 90.59%);
         } */
+/* 
+
    .costum-table thead tr th {
        background-color: hsl(223.85deg 54.17% 90.59%);
    }
@@ -85,6 +84,10 @@
 
    .costum-table tfoot tr:nth-child(1) td:nth-child(5) {
        background-color: hsl(44.4deg 100% 90.2%)
+   } */
+
+   .costum-table {
+       border-collapse: collapse;
    }
 
    .costum-table td,
@@ -94,5 +97,25 @@
        padding-bottom: 24px;
        padding-top: 24px;
        border: 1px solid black;
-       font-weight: bold;
+       font-weight: bolder;
+   }
+
+   .costum-table td {
+    background-color:  hsl(0deg 0% 94.9%);
+   }
+
+   .costum-table td:first-child {
+    background-color: hsl(223.85deg 54.17% 90.59%);
+   }
+   .costum-table td:last-child{
+    background-color: hsl(44.4deg 100% 90.2%);
+   }
+   .costum-table th {
+    background-color: hsl(223.85deg 54.17% 90.59%);
+   }
+   .costum-table th:nth-child(1) {
+    background-color: white;
+   }
+   .costum-table tfoot tr td {
+    background-color: hsl(44.4deg 100% 90.2%);
    }
